--- a/frontend/src/styles/components/dashboard.scss
+++ b/frontend/src/styles/components/dashboard.scss
@@ -101,3 +101,28 @@
     }
   }
 }
+
+.note-btn {
+  position: absolute;
+  left: 0;
+  padding: 10px;
+  background: #fff;
+  color: #6554c0;
+  width: 55px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  border-radius: 0 10px 10px 0;
+  transition: 0.3s all ease;
+  cursor: pointer;
+  box-shadow: 6px 2px 4px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+
+  &.active {
+    left: 500px;
+    animation: antdDrawerFadeIn 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
+    background: #faf9ff;
+  }
+}
