--- a/frontend/src/styles/components/logo.scss
+++ b/frontend/src/styles/components/logo.scss
@@ -1,7 +1,7 @@
 .logo {
   position: absolute;
   top: 20px;
-  border: 1px solid;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0 5px;
   border-radius: 3px;
 
