Connect to tmdb api

--- a/frontend/src/styles/components/movie-card.scss
+++ b/frontend/src/styles/components/movie-card.scss
@@ -178,7 +178,7 @@ $card-hover-offset-y: 60px;
   &__content {
     left: 350px;
     position: absolute;
-    top: 120px;
+    top: 70px;
   }
   // &__content
 
@@ -239,13 +239,13 @@ $card-hover-offset-y: 60px;
     font-size: 14px;
     max-width: 390px;
     p {
-      text-overflow: ellipsis;
-      overflow: hidden;
-      // Addition lines for 2 line or multiline ellipsis
-      display: -webkit-box !important;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
-      white-space: normal;
+      // text-overflow: ellipsis;
+      // overflow: hidden;
+      // // Addition lines for 2 line or multiline ellipsis
+      // display: -webkit-box !important;
+      // -webkit-line-clamp: 3;
+      // -webkit-box-orient: vertical;
+      // white-space: normal;
     }
   }
   // &__description
