--- a/frontend/src/styles/components/gauge.scss
+++ b/frontend/src/styles/components/gauge.scss
@@ -3,6 +3,10 @@
   bottom: 30px;
   right: 20px;
   font-family: "Roboto";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
   h1 {
     margin: 0;
@@ -12,5 +16,48 @@
   }
   text {
     font-family: "Roboto";
+  }
+
+  .recommend-btn {
+    margin-top: 30px;
+    transition: 0.2s all ease;
+  }
+}
+
+.gauge-flat {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 50px;
+  font-family: "Roboto";
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+
+  svg {
+    position: absolute;
+  }
+
+  h1 {
+    margin: 0;
+    text-align: center;
+    color: #334257;
+    bottom: 30px;
+    position: absolute;
+    font-size: 16px !important;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    padding: 0 10px;
+    border-radius: 10px 10px 0 0;
+    border-bottom: none;
+  }
+  text {
+    font-family: "Roboto";
+  }
+
+  .recommend-btn {
+    margin-top: 30px;
+    transition: 0.2s all ease;
   }
 }
