--- a/frontend/src/styles/components/logo.scss
+++ b/frontend/src/styles/components/logo.scss
@@ -4,6 +4,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0 5px;
   border-radius: 3px;
+  line-height: 40px;
 
   span {
     color: #ff2e63;
