Add movie posters to questions

--- a/frontend/src/styles/components/dashboard.scss
+++ b/frontend/src/styles/components/dashboard.scss
@@ -24,23 +24,17 @@
     margin-top: 30px;
 
     img {
-      width: 150px;
-      height: 210px;
+      width: 90px;
       border-radius: 10px;
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
       cursor: pointer;
       transition: 0.2s all ease;
-
-      &:hover {
-        margin-top: -20px;
-        box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-      }
     }
 
     .answer {
       letter-spacing: 1px;
       margin: 0;
-      width: 125px;
+      // width: 125px;
       margin: 0 10px;
       cursor: pointer;
       padding: 10px;
@@ -62,6 +56,16 @@
       &:hover {
         box-shadow: rgba(#c92a2a, 0.2) 0px 0px 0px 1px;
         color: #c92a2a;
+      }
+
+      .answer-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 15px 0;
+        img {
+          margin: 0 10px;
+        }
       }
     }
   }
